Fixed navigation image alignment

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -460,7 +460,7 @@ hr.line.align-right {
 .widget.extendednavigation ul.align-right li
 {
     text-align: right;
-    background-image: none!important;
+    background-position: 14px center;
 }
 
 .widget.extendednavigation ul {
@@ -511,8 +511,8 @@ hr.line.align-right {
     border-bottom: 1px solid darken(@color-swatch2,5%);
 }
 
-.widget.extendednavigation ul li.folder, .widget.extendednavigation ul li.folder a {
-    background-image: image('/mrandmrs/images/arrow-down.png');
+.widget.extendednavigation ul li.folder {
+    background-image: image('/mrandmrs/images/arrow-down.png')!important;
     background-repeat: no-repeat;
     background-position: right center;
 }
